--- a/css/style.css
+++ b/css/style.css
@@ -47,31 +47,50 @@ body a:active, a:visited, a:link{
     font-size: 2rem;
 }
 /* Signup Page*/
-.signinSignupTitle {
-    display:grid;
-    justify-content: center;
-    align-content: center;
-}
 .signup-container{
     display:grid;
     justify-content: center;
     align-content: center;
-    grid-template-columns: auto auto auto;
-  
-    height: 750px;
+    grid-template-columns: .5fr 1fr .5fr;
+    grid-template-rows: .1fr 1fr; 
+    height: 850px;
 }
 
+.signinTitle {
+    grid-column: 2/3;
+    grid-row: 1 /2;
+    display:grid;
+    justify-content: left;
+    align-content: center;
+    padding-left: 30px;
+    z-index: 1;
+}
+.signupTitle {
+    grid-column: 2/3;
+    grid-row: 1 /2;
+    padding-right: 30px;
+    display:grid;
+    justify-content: right;
+    align-content: center;
+    background-color: slategray;
+}
 .signup-form{
+    grid-column: 2/ 3;
+    grid-row: 2 /3;
     display:grid;
     justify-content: center;
-    align-content: center;
+    align-content: baseline;
+    padding-top: 30px;
     font-size: 28px;
     font-weight: bold;
 }
 .signup-form input{
-    margin-top: 30px;
+    margin-top: 15px;
     font-size: 28px;
     font-weight: bold;
+}
+input, label{
+    display: block;
 }
 .btnSubmit {
     display:grid;
@@ -174,7 +193,7 @@ footer {
 .footer-container{
     display:grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: .5fr .25fr .5fr 1fr;
+    grid-template-rows: .5fr .5fr 1fr;
     background-color: #3C486B;
     font-weight: bold;
     gap: 5px;
@@ -183,6 +202,7 @@ footer {
 .footer-contact {
     grid-column: 2/3;
     grid-row: 1/2;
+    padding-top: 15px;
     display:grid;
     justify-content: center;
     align-content: center;
@@ -190,6 +210,7 @@ footer {
 .footer-about {
     grid-column: 4/5;
     grid-row: 1/2;
+    padding-top: 15px;
     display:grid;
     justify-content: center;
     align-content: center;
@@ -197,13 +218,15 @@ footer {
 .footer-faq {
     grid-column: 6/7;
     grid-row: 1/2;
+    padding-top: 15px;
     display:grid;
     justify-content: center;
     align-content: center;
 }
 .footer-social {
     grid-column: 4/5;
-    grid-row: 3/4;
+    grid-row: 2/3;
+    padding-top: 15px;
     display:grid;
     justify-content: center;
     align-content: center;
@@ -211,7 +234,7 @@ footer {
 .footer-icon1 {
     display:inline-block;
     grid-column: 3/4;
-    grid-row: 4/5;
+    grid-row: 3/4;
     display:grid;
     justify-content: right;
     align-content: center;
@@ -219,7 +242,7 @@ footer {
 .footer-icon2 {
     display:inline-block;
     grid-column: 4/5;
-    grid-row: 4/5;
+    grid-row: 3/4;
     display:grid;
     justify-content: center;
     align-content: center;
@@ -227,7 +250,7 @@ footer {
 .footer-icon3 {
     display:inline-block;
     grid-column: 5/6;
-    grid-row: 4/5;
+    grid-row: 3/4;
     display:grid;
     justify-content: left;
     align-content: center;
