--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,89 @@ input, label{
     padding: 30px;
 }
 
+/*Profile Page*/
+.container{
+    position: relative;
+    width: 100%;
+    height:100%;
+    
+}
+.profileCard {
+    display:grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    position: absolute;
+    margin: 0 ;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 600px;
+    height: 400px;
+    border-radius: 25px;
+    background-color: #3C486B;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    border-color: white;
+    border-style: solid;
+}
+.title {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    grid-column: 1/9;
+    grid-row: 1/2;
+    color: #F0F0F0;
+    font-weight: 600;
+}
+.profilePicture {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    grid-column: 1/4;
+    grid-row: 2/4;
+    
+}
+.profilePicture img {
+    height: 150px;
+    border-radius: 25px;
+
+}
+/*Update Form*/
+.updateContainer {
+    position: relative;
+    width: 100%;
+    height: 1100px;
+}
+.updateForm {
+    
+    display:grid;
+    justify-content: center;
+    align-content: center;
+    position:absolute;
+    margin: 0;
+    top:50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 800px;
+    border-color: white;
+    border-style: solid;
+    border-radius: 25px;
+    background-color: #3C486B;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    font-size: 28px;
+    font-weight: bold;
+    color: white;
+   padding: 15px;
+    
+}
+
+.updateForm input {
+   margin-top: 15px;
+    font-size: 28px;
+    font-weight: bold;
+}
+
 /* Footer */
 
 footer {
