--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ input, label{
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(8, 1fr);
     position: absolute;
-    margin: 0 ;
+    margin: 0;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
@@ -220,9 +220,9 @@ input, label{
 .profilePicture {
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     grid-column: 1/4;
-    grid-row: 2/4;
+    grid-row: 2/5;
     
 }
 .profilePicture img {
@@ -230,14 +230,91 @@ input, label{
     border-radius: 25px;
 
 }
+.instagram{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 3/4;
+    grid-row: 7/8;
+    color: white;
+    font-size: 36px;
+}
+.facebook {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 5/6;
+    grid-row: 7/8;
+    color: white;
+    font-size: 36px;
+}
+.linkin{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 4/5;
+    grid-row: 7/8;
+    color: white;
+    font-size: 36px;
+}
+.twitter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 2/3;
+    grid-row: 7/8;
+    color: white;
+    font-size: 36px;
+}
+.qr {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 6/9;
+    grid-row: 5/9;
+}
+.qr img{
+    height: 150px;
+    
+}
+.profile-link a:active, a:visited, a:link{
+    color: white;
+    text-decoration: none;
+  }
+.cellPhone{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    grid-column: 4/7;
+    grid-row: 2/3;
+    color: white;
+    font-size: 24px;
+}
+.workPhone{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    grid-column:4/7;
+    grid-row: 3/4;
+    color: white;
+    font-size: 24px;
+}
+.email{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    grid-column: 4/8;
+    grid-row: 4/5;
+    color: white;
+    font-size: 24px;
+}
 /*Update Form*/
 .updateContainer {
     position: relative;
     width: 100%;
-    height: 1100px;
+    height: 1400px;
 }
 .updateForm {
-    
     display:grid;
     justify-content: center;
     align-content: center;
@@ -257,7 +334,6 @@ input, label{
     font-weight: bold;
     color: white;
    padding: 15px;
-    
 }
 
 .updateForm input {
