--- a/css/style.css
+++ b/css/style.css
@@ -51,46 +51,68 @@ body a:active, a:visited, a:link{
     display:grid;
     justify-content: center;
     align-content: center;
-    grid-template-columns: .5fr 1fr .5fr;
+    grid-template-columns: .5fr 1fr 1fr .5fr;
     grid-template-rows: .1fr 1fr; 
-    height: 850px;
+    height: 100%;
 }
 
-.signinTitle {
-    grid-column: 2/3;
+.inTitle {
+    grid-column: 3/4;
     grid-row: 1 /2;
-    display:grid;
-    justify-content: left;
-    align-content: center;
+    text-align: center;
     padding-left: 30px;
     z-index: 1;
+    background-color: slategray;
 }
-.signupTitle {
+.upTitle {
     grid-column: 2/3;
     grid-row: 1 /2;
-    padding-right: 30px;
-    display:grid;
-    justify-content: right;
-    align-content: center;
+    text-align: center;
+    padding-left: 30px;
+    z-index: 1;
     background-color: slategray;
 }
 .signup-form{
-    grid-column: 2/ 3;
+    grid-column: 2/ 4;
     grid-row: 2 /3;
-    display:grid;
+    display: grid;
     justify-content: center;
-    align-content: baseline;
+    align-content: first baseline;
     padding-top: 30px;
     font-size: 28px;
     font-weight: bold;
 }
+.signin-form{
+    display: grid;
+    justify-content: center;
+    align-content: first baseline;
+    grid-column: 2/ 4;
+    grid-row: 2 /3;
+    padding-top: 30px;
+    font-size: 28px;
+    font-weight: bold;
+}
+#formSignin {
+    display: none;
+    justify-content: center;
+    align-content: center;
+}
+#formSignup {
+    display: block;
+}
+
 .signup-form input{
     margin-top: 15px;
     font-size: 28px;
     font-weight: bold;
 }
-input, label{
-    display: block;
+.signin-form input{
+    margin-top: 15px;
+    font-size: 28px;
+    font-weight: bold;
+}
+input, label {
+    display:block;
 }
 .btnSubmit {
     display:grid;
